AD-120:Fixed gutenberg ad alignment and ad overflow

--- a/public/css/wpadcenter-public.css
+++ b/public/css/wpadcenter-public.css
@@ -10,6 +10,11 @@
   clear: both;
 }
 
+/*To limit the ad inside the container size.*/
+.wpadcenter-ad-container {
+  overflow: hidden;
+}
+
 .wpadcenter-activebutton {
   border: 1px solid;
   border-radius: 3px;
